# Trabajos-de-microporcesadores

OLEDNom/: OLEDY.c  ssd1306_font.h
Raiz Cuadrada/: tarea2.asm  tarea2.hex  tarea2.lst
Tarea 3/: Ordenamiento.asm  Ordenamiento.hex  Ordenamiento.lst
Yael Oled/: CMakeLists.txt  OLEDY.c  ssd1306_font.h
